Update release version 2.1.3 - Re-update GeoMet-Weather layers list due to timing of global get capabilities generation

--- a/src/locales/en/layers_weather.json
+++ b/src/locales/en/layers_weather.json
@@ -3080,6 +3080,14 @@
   "RAQDPS.SFC_SO2": "Concentration: surface SO2 [mol/mol]",
   "RAQDPS.Sfc_PM10-WildfireSmokePlume": "Total concentrations associated with forest fire and vegetation plumes: surface PM10 [kg/m³]",
   "RAQDPS.Sfc_PM2.5-WildfireSmokePlume": "Total concentrations associated with forest fire and vegetation plumes: surface PM2.5 [kg/m³]",
+  "RDAQA-FW_10km_PM10": "Concentration: surface PM10 (FireWork) [kg/m³]",
+  "RDAQA-FW_10km_PM2.5": "Concentration: surface PM2.5 (FireWork) [kg/m³]",
+  "RDAQA-Prelim_10km_NO": "Concentration: surface NO (preliminary) [mol/mol]",
+  "RDAQA-Prelim_10km_NO2": "Concentration: surface NO2 (preliminary) [mol/mol]",
+  "RDAQA-Prelim_10km_O3": "Concentration: surface O3 (preliminary) [mol/mol]",
+  "RDAQA-Prelim_10km_PM10": "Concentration: surface PM10 (preliminary) [kg/m³]",
+  "RDAQA-Prelim_10km_PM2.5": "Concentration: surface PM2.5 (preliminary) [kg/m³]",
+  "RDAQA-Prelim_10km_SO2": "Concentration: surface SO2 (preliminary) [mol/mol]",
   "RDAQA.CE_NO2-MAvg": "Monthly average of surface NO2 [ppbv]",
   "RDAQA.CE_NO2-MAvg-DMax": "Monthly average of daily maximum of surface NO2 [ppbv]",
   "RDAQA.CE_NO2-YAvg": "Yearly average of surface NO2 [ppbv]",
@@ -3100,6 +3108,12 @@
   "RDAQA.CE_SO2-MAvg-DMax": "Monthly average of daily maximum of surface SO2 [ppbv]",
   "RDAQA.CE_SO2-YAvg": "Yearly average of surface SO2 [ppbv]",
   "RDAQA.CE_SO2-YAvg-DMax": "Yearly average of daily maximum of surface SO2 [ppbv]",
+  "RDAQA_10km_NO": "Concentration: surface NO [mol/mol]",
+  "RDAQA_10km_NO2": "Concentration: surface NO2 [mol/mol]",
+  "RDAQA_10km_O3": "Concentration: surface O3 [mol/mol]",
+  "RDAQA_10km_PM10": "Concentration: surface PM10 [kg/m³]",
+  "RDAQA_10km_PM2.5": "Concentration: surface PM2.5 [kg/m³]",
+  "RDAQA_10km_SO2": "Concentration: surface SO2 [mol/mol]",
   "RDPA-Prelim_10km_Precip-Accum24h-T06Z": "RDPA - Quantity of precipitation over a 24h hour interval (preliminary) - T06Z [mm] [10 km]",
   "RDPA-Prelim_10km_Precip-Accum24h-T12Z": "RDPA - Quantity of precipitation over a 24h hour interval (preliminary) - T12Z [mm] [10 km]",
   "RDPA-Prelim_10km_Precip-Accum6h": "RDPA - Quantity of precipitation over a 6h hour interval (preliminary) [mm] [10 km]",
