--- a/src/locales/fr/layers_weather.json
+++ b/src/locales/fr/layers_weather.json
@@ -3080,6 +3080,14 @@
   "RAQDPS.SFC_SO2": "Concentration : surface SO2 [mol/mol]",
   "RAQDPS.Sfc_PM10-WildfireSmokePlume": "Concentrations totales associées aux panaches de feux de forêt et de végétation : surface PM10 [kg/m³]",
   "RAQDPS.Sfc_PM2.5-WildfireSmokePlume": "Concentrations totales associées aux panaches de feux de forêt et de végétation : surface PM2.5 [kg/m³]",
+  "RDAQA-FW_10km_PM10": "Concentration : surface PM10 (FireWork) [kg/m³]",
+  "RDAQA-FW_10km_PM2.5": "Concentration : surface PM2.5 (FireWork) [kg/m³]",
+  "RDAQA-Prelim_10km_NO": "Concentration : surface NO (préliminaire) [mol/mol]",
+  "RDAQA-Prelim_10km_NO2": "Concentration : surface NO2 (préliminaire) [mol/mol]",
+  "RDAQA-Prelim_10km_O3": "Concentration : surface O3 (préliminaire) [mol/mol]",
+  "RDAQA-Prelim_10km_PM10": "Concentration : surface PM10 (préliminaire) [kg/m³]",
+  "RDAQA-Prelim_10km_PM2.5": "Concentration : surface PM2.5 (préliminaire) [kg/m³]",
+  "RDAQA-Prelim_10km_SO2": "Concentration : surface SO2 (préliminaire) [mol/mol]",
   "RDAQA.CE_NO2-MAvg": "Moyenne mensuelle de NO2 en surface [ppbv]",
   "RDAQA.CE_NO2-MAvg-DMax": "Moyenne mensuelle du maximum journalier de NO2 en surface [ppbv]",
   "RDAQA.CE_NO2-YAvg": "Moyenne annuelle de NO2 en surface [ppbv]",
@@ -3100,6 +3108,12 @@
   "RDAQA.CE_SO2-MAvg-DMax": "Moyenne mensuelle du maximum journalier de SO2 en surface [ppbv]",
   "RDAQA.CE_SO2-YAvg": "Moyenne annuelle de SO2 en surface [ppbv]",
   "RDAQA.CE_SO2-YAvg-DMax": "Moyenne annuelle du maximum journalier de SO2 en surface [ppbv]",
+  "RDAQA_10km_NO": "Concentration : surface NO [mol/mol]",
+  "RDAQA_10km_NO2": "Concentration : surface NO2 [mol/mol]",
+  "RDAQA_10km_O3": "Concentration : surface O3 [mol/mol]",
+  "RDAQA_10km_PM10": "Concentration : surface PM10 [kg/m³]",
+  "RDAQA_10km_PM2.5": "Concentration : surface PM2.5 [kg/m³]",
+  "RDAQA_10km_SO2": "Concentration : surface SO2 [mol/mol]",
   "RDPA-Prelim_10km_Precip-Accum24h-T06Z": "ARDP - Quantité de précipitations sur un intervalle de 24 heures (préliminaire) - T06Z [mm] [10 km]",
   "RDPA-Prelim_10km_Precip-Accum24h-T12Z": "ARDP - Quantité de précipitations sur un intervalle de 24 heures (préliminaire) - T12Z [mm] [10 km]",
   "RDPA-Prelim_10km_Precip-Accum6h": "ARDP - Quantité de précipitations sur un intervalle de 6 heures (préliminaire) [mm] [10 km]",
