--- a/src/locales/fr/layers_weather.json
+++ b/src/locales/fr/layers_weather.json
@@ -650,73 +650,39 @@
   "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P06M-P08M": "Probabilités prévues de précipitations près de la normale - Mois 6-8 [%]",
   "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P09M-P11M": "Probabilités prévues de précipitations près de la normale - Mois 9-11 [%]",
   "FIREWORK.HOTSPOTS": "Points chauds considérés par SRPDQA-FireWork",
-  "GDPS-WEonG_15km_AirTemp": "GDPS-WEonG - Température [°C]",
   "GDPS-WEonG_15km_AirTemp.3h": "GDPS-WEonG - Température [°C] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_BlowingSnow-Prob": "GDPS-WEonG - Probabilité de poudrerie [%]",
   "GDPS-WEonG_15km_BlowingSnow-Prob.3h": "GDPS-WEonG - Probabilité de poudrerie [%] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_BlowingSnowPresence": "GDPS-WEonG - Présence de poudrerie",
   "GDPS-WEonG_15km_BlowingSnowPresence.3h": "GDPS-WEonG - Présence de poudrerie (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_DewPointTemp": "GDPS-WEonG - Température du point de rosée [C]",
   "GDPS-WEonG_15km_DewPointTemp.3h": "GDPS-WEonG - Température du point de rosée [C] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_DominantPrecipType": "GDPS-WEonG - Type dominant de précipitation",
   "GDPS-WEonG_15km_DominantPrecipType.3h": "GDPS-WEonG - Type dominant de précipitation (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_Drizzle-Prob": "GDPS-WEonG - Probabilité de bruine [%]",
   "GDPS-WEonG_15km_Drizzle-Prob.3h": "GDPS-WEonG - Probabilité de bruine [%] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_FreezingDrizzle-Prob": "GDPS-WEonG - Probabilité de bruine verglaçante [%]",
   "GDPS-WEonG_15km_FreezingDrizzle-Prob.3h": "GDPS-WEonG - Probabilité de bruine verglaçante [%] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_FreezingPrecip-Prob": "GDPS-WEonG - Probabilité de précipitation verglaçante [%]",
   "GDPS-WEonG_15km_FreezingPrecip-Prob.3h": "GDPS-WEonG - Probabilité de précipitation verglaçante [%] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_FreezingPrecipCondAmt": "GDPS-WEonG - Quantité conditionnelle de précipitations verglaçantes [mm]",
   "GDPS-WEonG_15km_FreezingPrecipCondAmt.3h": "GDPS-WEonG - Quantité conditionnelle de précipitations verglaçantes [mm] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_FreezingRain-Prob": "GDPS-WEonG - Probabilité de pluie verglaçante [%]",
   "GDPS-WEonG_15km_FreezingRain-Prob.3h": "GDPS-WEonG - Probabilité de pluie verglaçante [%] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_IceFogVisibility": "GDPS-WEonG - Visibilité dans le brouillard glacé [m]",
   "GDPS-WEonG_15km_IceFogVisibility.3h": "GDPS-WEonG - Visibilité dans le brouillard glacé [m] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_IcePellets-Prob": "GDPS-WEonG - Probabilité de grésil [%]",
   "GDPS-WEonG_15km_IcePellets-Prob.3h": "GDPS-WEonG - Probabilité de grésil [%] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_IcePelletsCondAmt": "GDPS-WEonG - Quantité conditionnelle de granulés de glace solide [m]",
   "GDPS-WEonG_15km_IcePelletsCondAmt.3h": "GDPS-WEonG - Quantité conditionnelle de granulés de glace solide [m] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_InstantPrecipType": "GDPS-WEonG - Type de précipitation instantanée",
   "GDPS-WEonG_15km_InstantPrecipType.3h": "GDPS-WEonG - Type de précipitation instantanée (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_LiquidFogVisibility": "GDPS-WEonG - Visibilité à travers le brouillard liquide [m]",
   "GDPS-WEonG_15km_LiquidFogVisibility.3h": "GDPS-WEonG - Visibilité à travers le brouillard liquide [m] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_LiquidPrecip-Prob": "GDPS-WEonG - Probabilité de précipitation liquide [%]",
   "GDPS-WEonG_15km_LiquidPrecip-Prob.3h": "GDPS-WEonG - Probabilité de précipitation liquide [%] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_LiquidPrecipCondAmt": "GDPS-WEonG - Quantité conditionnelle de précipitation liquide [m]",
   "GDPS-WEonG_15km_LiquidPrecipCondAmt.3h": "GDPS-WEonG - Quantité conditionnelle de précipitation liquide [m] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_Orography": "GDPS-WEonG - Orographie du modèle [m]",
   "GDPS-WEonG_15km_Orography.3h": "GDPS-WEonG - Orographie du modèle [m] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_Precip-Prob": "GDPS-WEonG - Probabilité de précipitation [%]",
   "GDPS-WEonG_15km_Precip-Prob.3h": "GDPS-WEonG - Probabilité de précipitation [%] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_PrecipCharacter": "GDPS-WEonG - Caractère de la précipitation",
   "GDPS-WEonG_15km_PrecipCharacter.3h": "GDPS-WEonG - Caractère de la précipitation (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_PrecipCondAmt": "GDPS-WEonG - Quantité conditionnelle de précipitation [m]",
   "GDPS-WEonG_15km_PrecipCondAmt.3h": "GDPS-WEonG - Quantité conditionnelle de précipitation [m] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_Rain-Prob": "GDPS-WEonG - Probabilité de pluie [%]",
   "GDPS-WEonG_15km_Rain-Prob.3h": "GDPS-WEonG - Probabilité de pluie [%] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_SecondMostCommonPrecipType": "GDPS-WEonG - Deuxième type de précipitation le plus commun",
   "GDPS-WEonG_15km_SecondMostCommonPrecipType.3h": "GDPS-WEonG - Deuxième type de précipitation le plus commun (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_SkyState": "GDPS-WEonG - Etat du ciel jour/nuit (couverture et opacité nuageuse combinées)",
   "GDPS-WEonG_15km_SkyState.3h": "GDPS-WEonG - Etat du ciel jour/nuit (couverture et opacité nuageuse combinées) (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_Snow-Prob": "GDPS-WEonG - Probabilité de neige [%]",
   "GDPS-WEonG_15km_Snow-Prob.3h": "GDPS-WEonG - Probabilité de neige [%] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_SnowHeight": "GDPS-WEonG - Hauteur du niveau de la neige [m]",
   "GDPS-WEonG_15km_SnowHeight.3h": "GDPS-WEonG - Hauteur du niveau de la neige [m] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_SnowSqualls-Prob": "GDPS-WEonG - Probabilité de bourrasque de neige [%]",
   "GDPS-WEonG_15km_SnowSqualls-Prob.3h": "GDPS-WEonG - Probabilité de bourrasque de neige [%] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_SolidSnowCondAmt": "GDPS-WEonG - Quantité conditionnelle de neige solide [m]",
   "GDPS-WEonG_15km_SolidSnowCondAmt.3h": "GDPS-WEonG - Quantité conditionnelle de neige solide [m] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_Thunderstorm-Prob": "GDPS-WEonG - Probabilité d'occurence d'orage [%]",
   "GDPS-WEonG_15km_Thunderstorm-Prob.3h": "GDPS-WEonG - Probabilité d'occurence d'orage [%] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_TotalPrecipIntensityIndex": "GDPS-WEonG - Indice d'intensité des précipitations totales",
   "GDPS-WEonG_15km_TotalPrecipIntensityIndex.3h": "GDPS-WEonG - Indice d'intensité des précipitations totales (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_WaterLand-Proportion": "GDPS-WEonG - Proportion terre/eau",
   "GDPS-WEonG_15km_WaterLand-Proportion.3h": "GDPS-WEonG - Proportion terre/eau (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_WindDir": "GDPS-WEonG - Direction du vent [deg true]",
   "GDPS-WEonG_15km_WindDir.3h": "GDPS-WEonG - Direction du vent [deg true] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_WindGust": "GDPS-WEonG - Rafale de vents [m/s]",
   "GDPS-WEonG_15km_WindGust.3h": "GDPS-WEonG - Rafale de vents [m/s] (prévision aux 3 heures)",
-  "GDPS-WEonG_15km_WindSpeed": "GDPS-WEonG - Vitesse du vent [m/s]",
   "GDPS-WEonG_15km_WindSpeed.3h": "GDPS-WEonG - Vitesse du vent [m/s] (prévision aux 3 heures)",
   "GDPS.CONV_KINDEX.PT3H": "GDPS.CONV - Indice du potentiel d'orages George-K (prévision aux 3 heures)",
   "GDPS.CONV_KINDEX.PT3H-CONTOUR": "GDPS.CONV - Indice du potentiel d'orages George-K (prévision aux 3 heures) (contour)",
@@ -2203,14 +2169,32 @@
   "GEWPS_25km_WindWavesSignificantHeight_19": "GEWPS_25km_WindWavesSignificantHeight_19 - Hauteur significative des vagues de la mer du vent [m]",
   "GEWPS_25km_WindWavesSignificantHeight_20": "GEWPS_25km_WindWavesSignificantHeight_20 - Hauteur significative des vagues de la mer du vent [m]",
   "GEWPS_25km_WindWavesSignificantHeight_21": "GEWPS_25km_WindWavesSignificantHeight_21 - Hauteur significative des vagues de la mer du vent [m]",
+  "GOES-East_1km_DayCloudType-NightMicrophysics": "GOES-Est Type de nuage de jour/Microphysique de nuit [1 km]",
   "GOES-East_1km_DayVis": "GOES-Est visibilité de jour / Convection nuageuse de jour [1 km]",
+  "GOES-East_1km_DayVis-NightIR": "GOES-Est Visibilité de jour/IR de nuit [1 km]",
+  "GOES-East_1km_FireTemperature-SWIR": "GOES-Est Température des feux/SWIR [1 km]",
   "GOES-East_1km_NaturalColor": "GOES-Est Couleur naturelle [1 km]",
+  "GOES-East_1km_SmokeABIband1-SWIR": "GOES-Est Fumée sur Canal-1 ABI/SWIR [1 km]",
+  "GOES-East_1km_SnowFog-NightMicrophysics": "GOES-Est Neige-brouillard/Microphysique de nuit [1 km]",
+  "GOES-East_1km_VisibleIRSandwich-NightMicrophysicsIR": "GOES-Est Sandwich Visible et IR/Microphysique de nuit et IR [1 km]",
+  "GOES-East_2km_Ash": "GOES-Est Cendre [2 km]",
+  "GOES-East_2km_Dust": "GOES-Est Poussière [2 km]",
   "GOES-East_2km_NightIR": "GOES-Est IR de nuit [2 km]",
   "GOES-East_2km_NightMicrophysics": "GOES-Est Microphysique de nuit [2 km]",
+  "GOES-East_2km_SO2": "GOES-Est SO2 [2 km]",
+  "GOES-West_1km_DayCloudType-NightMicrophysics": "GOES-Ouest Type de nuage de jour/Microphysique de nuit [1 km]",
   "GOES-West_1km_DayVis": "GOES-Ouest visibilité de jour / Convection nuageuse de jour [1 km]",
+  "GOES-West_1km_DayVis-NightIR": "GOES-Ouest Visibilité de jour/IR de nuit [1 km]",
+  "GOES-West_1km_FireTemperature-SWIR": "GOES-Ouest Température des feux/SWIR [1 km]",
   "GOES-West_1km_NaturalColor": "GOES-Ouest Couleur naturelle [1 km]",
+  "GOES-West_1km_SmokeABIband1-SWIR": "GOES-Ouest Fumée sur Canal-1 ABI/SWIR [1 km]",
+  "GOES-West_1km_SnowFog-NightMicrophysics": "GOES-Ouest Neige-brouillard/Microphysique de nuit [1 km]",
+  "GOES-West_1km_VisibleIRSandwich-NightMicrophysicsIR": "GOES-Ouest Sandwich Visible et IR/Microphysique de nuit et IR [1 km]",
+  "GOES-West_2km_Ash": "GOES-Ouest Cendre [2 km]",
+  "GOES-West_2km_Dust": "GOES-Ouest Poussière [2 km]",
   "GOES-West_2km_NightIR": "GOES-Ouest IR de nuit [2 km]",
   "GOES-West_2km_NightMicrophysics": "GOES-Ouest Microphysique de nuit [2 km]",
+  "GOES-West_2km_SO2": "GOES-Ouest SO2 [2 km]",
   "HRDPA-Prelim_2.5km_Precip-Accum24h-T06Z": "AHRDP-Prélim.24P - Quantité de précipitations (préliminaire) - T06Z [mm]",
   "HRDPA-Prelim_2.5km_Precip-Accum24h-T12Z": "AHRDP-Prélim.24P - Quantité de précipitations (préliminaire) - T12Z [mm]",
   "HRDPA-Prelim_2.5km_Precip-Accum6h": "AHRDP-Prélim.06 - Quantité de précipitations (préliminaire) [mm]",
@@ -3060,14 +3044,6 @@
   "RAQDPS-FW.CE_PM2.5-DIFF-MAvg-DMax": "Moyenne mensuelle de la contribution maximale quotidienne aux feux de forêt : PM2,5 en surface [ug/m³]",
   "RAQDPS-FW.CE_PM2.5-DIFF-YAvg": "Moyenne annuelle de la contribution des feux de forêt : PM2,5 en surface [ug/m³]",
   "RAQDPS-FW.CE_PM2.5-DIFF-YAvg-DMax": "Moyenne annuelle de la contribution maximale journalière des feux de forêt : PM2,5 en surface [ug/m³]",
-  "RAQDPS-FW.EATM_PM10": "Concentration : intégral de la colonne PM10 [kg/m²]",
-  "RAQDPS-FW.EATM_PM10-DIFF": "Différence de concentration avec le modèle SRPDQA : intégral de la colonne PM10 [kg/m²]",
-  "RAQDPS-FW.EATM_PM2.5": "Concentration : intégral de la colonne PM2.5 [kg/m²]",
-  "RAQDPS-FW.EATM_PM2.5-DIFF": "Différence de concentration avec le modèle SRPDQA : intégral de la colonne PM2.5 [kg/m²]",
-  "RAQDPS-FW.SFC_PM10": "Concentration : surface PM10 [kg/m³]",
-  "RAQDPS-FW.SFC_PM10-DIFF": "Différence de concentration avec le modèle SRPDQA : surface PM10 [kg/m³]",
-  "RAQDPS-FW.SFC_PM2.5": "Concentration : surface PM2.5 [kg/m³]",
-  "RAQDPS-FW.SFC_PM2.5-DIFF": "Différence de concentration avec le modèle SRPDQA : surface PM2.5 [kg/m³]",
   "RAQDPS.EATM_PM10": "Concentration : intégral de la colonne PM10 [kg/m2]",
   "RAQDPS.EATM_PM2.5": "Concentration : intégral de la colonne PM2.5 [kg/m2]",
   "RAQDPS.EAtm_PM10-WildfireSmokePlume": "Concentrations totales associées aux panaches de feux de forêt et de végétation : intégral de la colonne PM10 [kg/m²]",
