Update GeoMet-Weather layers list to 2.30.0

--- a/src/locales/en/layers_weather.json
+++ b/src/locales/en/layers_weather.json
@@ -650,39 +650,73 @@
   "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P06M-P08M": "Probability of precipitation near normal - Months 6-8 [%]",
   "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P09M-P11M": "Probability of precipitation near normal - Months 9-11 [%]",
   "FIREWORK.HOTSPOTS": "Wildfire hotspots ingested by RAQDPS-FireWork",
+  "GDPS-WEonG_15km_AirTemp": "GDPS-WEonG - Temperature [°C]",
   "GDPS-WEonG_15km_AirTemp.3h": "GDPS-WEonG - Temperature [°C] (3 hourly forecast)",
+  "GDPS-WEonG_15km_BlowingSnow-Prob": "GDPS-WEonG - Probability of blowing snow [%]",
   "GDPS-WEonG_15km_BlowingSnow-Prob.3h": "GDPS-WEonG - Probability of blowing snow [%] (3 hourly forecast)",
+  "GDPS-WEonG_15km_BlowingSnowPresence": "GDPS-WEonG - Presence of blowing snow",
   "GDPS-WEonG_15km_BlowingSnowPresence.3h": "GDPS-WEonG - Presence of blowing snow (3 hourly forecast)",
+  "GDPS-WEonG_15km_DewPointTemp": "GDPS-WEonG - Dew point temperature [C]",
   "GDPS-WEonG_15km_DewPointTemp.3h": "GDPS-WEonG - Dew point temperature [C] (3 hourly forecast)",
+  "GDPS-WEonG_15km_DominantPrecipType": "GDPS-WEonG - Dominant precipitation type",
   "GDPS-WEonG_15km_DominantPrecipType.3h": "GDPS-WEonG - Dominant precipitation type (3 hourly forecast)",
+  "GDPS-WEonG_15km_Drizzle-Prob": "GDPS-WEonG - Probability of drizzle [%]",
   "GDPS-WEonG_15km_Drizzle-Prob.3h": "GDPS-WEonG - Probability of drizzle [%] (3 hourly forecast)",
+  "GDPS-WEonG_15km_FreezingDrizzle-Prob": "GDPS-WEonG - Probability of freezing drizzle [%]",
   "GDPS-WEonG_15km_FreezingDrizzle-Prob.3h": "GDPS-WEonG - Probability of freezing drizzle [%] (3 hourly forecast)",
+  "GDPS-WEonG_15km_FreezingPrecip-Prob": "GDPS-WEonG - Probability of freezing precipitation [%]",
   "GDPS-WEonG_15km_FreezingPrecip-Prob.3h": "GDPS-WEonG - Probability of freezing precipitation [%] (3 hourly forecast)",
+  "GDPS-WEonG_15km_FreezingPrecipCondAmt": "GDPS-WEonG - Conditional amount of freezing precipitation [mm]",
   "GDPS-WEonG_15km_FreezingPrecipCondAmt.3h": "GDPS-WEonG - Conditional amount of freezing precipitation [mm] (3 hourly forecast)",
+  "GDPS-WEonG_15km_FreezingRain-Prob": "GDPS-WEonG - Probability of freezing rain [%]",
   "GDPS-WEonG_15km_FreezingRain-Prob.3h": "GDPS-WEonG - Probability of freezing rain [%] (3 hourly forecast)",
+  "GDPS-WEonG_15km_IceFogVisibility": "GDPS-WEonG - Visibility through ice fog [m]",
   "GDPS-WEonG_15km_IceFogVisibility.3h": "GDPS-WEonG - Visibility through ice fog [m] (3 hourly forecast)",
+  "GDPS-WEonG_15km_IcePellets-Prob": "GDPS-WEonG - Probability of ice pellets [%]",
   "GDPS-WEonG_15km_IcePellets-Prob.3h": "GDPS-WEonG - Probability of ice pellets [%] (3 hourly forecast)",
+  "GDPS-WEonG_15km_IcePelletsCondAmt": "GDPS-WEonG - Conditional amount of solid ice pellets [m]",
   "GDPS-WEonG_15km_IcePelletsCondAmt.3h": "GDPS-WEonG - Conditional amount of solid ice pellets [m] (3 hourly forecast)",
+  "GDPS-WEonG_15km_InstantPrecipType": "GDPS-WEonG - Instantaneous precipitation type",
   "GDPS-WEonG_15km_InstantPrecipType.3h": "GDPS-WEonG - Instantaneous precipitation type (3 hourly forecast)",
+  "GDPS-WEonG_15km_LiquidFogVisibility": "GDPS-WEonG - Visibility through liquid fog [m]",
   "GDPS-WEonG_15km_LiquidFogVisibility.3h": "GDPS-WEonG - Visibility through liquid fog [m] (3 hourly forecast)",
+  "GDPS-WEonG_15km_LiquidPrecip-Prob": "GDPS-WEonG - Probability of liquid precipitation [%]",
   "GDPS-WEonG_15km_LiquidPrecip-Prob.3h": "GDPS-WEonG - Probability of liquid precipitation [%] (3 hourly forecast)",
+  "GDPS-WEonG_15km_LiquidPrecipCondAmt": "GDPS-WEonG - Conditional amount of liquid precipitation [m]",
   "GDPS-WEonG_15km_LiquidPrecipCondAmt.3h": "GDPS-WEonG - Conditional amount of liquid precipitation [m] (3 hourly forecast)",
+  "GDPS-WEonG_15km_Orography": "GDPS-WEonG - Model orography [m]",
   "GDPS-WEonG_15km_Orography.3h": "GDPS-WEonG - Model orography [m] (3 hourly forecast)",
+  "GDPS-WEonG_15km_Precip-Prob": "GDPS-WEonG - Probability of precipitation [%]",
   "GDPS-WEonG_15km_Precip-Prob.3h": "GDPS-WEonG - Probability of precipitation [%] (3 hourly forecast)",
+  "GDPS-WEonG_15km_PrecipCharacter": "GDPS-WEonG - Character of precipitation",
   "GDPS-WEonG_15km_PrecipCharacter.3h": "GDPS-WEonG - Character of precipitation (3 hourly forecast)",
+  "GDPS-WEonG_15km_PrecipCondAmt": "GDPS-WEonG - Conditional amount of precipitation [m]",
   "GDPS-WEonG_15km_PrecipCondAmt.3h": "GDPS-WEonG - Conditional amount of precipitation [m] (3 hourly forecast)",
+  "GDPS-WEonG_15km_Rain-Prob": "GDPS-WEonG - Probability of rain [%]",
   "GDPS-WEonG_15km_Rain-Prob.3h": "GDPS-WEonG - Probability of rain [%] (3 hourly forecast)",
+  "GDPS-WEonG_15km_SecondMostCommonPrecipType": "GDPS-WEonG - The second most common precipitation type",
   "GDPS-WEonG_15km_SecondMostCommonPrecipType.3h": "GDPS-WEonG - The second most common precipitation type (3 hourly forecast)",
+  "GDPS-WEonG_15km_SkyState": "GDPS-WEonG - Sky state day/night (combined cloud cover and opacity)",
   "GDPS-WEonG_15km_SkyState.3h": "GDPS-WEonG - Sky state day/night (combined cloud cover and opacity) (3 hourly forecast)",
+  "GDPS-WEonG_15km_Snow-Prob": "GDPS-WEonG - Probability of snow [%]",
   "GDPS-WEonG_15km_Snow-Prob.3h": "GDPS-WEonG - Probability of snow [%] (3 hourly forecast)",
+  "GDPS-WEonG_15km_SnowHeight": "GDPS-WEonG - Height of snow level [m]",
   "GDPS-WEonG_15km_SnowHeight.3h": "GDPS-WEonG - Height of snow level [m] (3 hourly forecast)",
+  "GDPS-WEonG_15km_SnowSqualls-Prob": "GDPS-WEonG - Probability of snow squalls [%]",
   "GDPS-WEonG_15km_SnowSqualls-Prob.3h": "GDPS-WEonG - Probability of snow squalls [%] (3 hourly forecast)",
+  "GDPS-WEonG_15km_SolidSnowCondAmt": "GDPS-WEonG - Conditional amount of solid snow [m]",
   "GDPS-WEonG_15km_SolidSnowCondAmt.3h": "GDPS-WEonG - Conditional amount of solid snow [m] (3 hourly forecast)",
+  "GDPS-WEonG_15km_Thunderstorm-Prob": "GDPS-WEonG - Probability of thunderstorm occurence [%]",
   "GDPS-WEonG_15km_Thunderstorm-Prob.3h": "GDPS-WEonG - Probability of thunderstorm occurence [%] (3 hourly forecast)",
+  "GDPS-WEonG_15km_TotalPrecipIntensityIndex": "GDPS-WEonG - Total precipitation intensity index",
   "GDPS-WEonG_15km_TotalPrecipIntensityIndex.3h": "GDPS-WEonG - Total precipitation intensity index (3 hourly forecast)",
+  "GDPS-WEonG_15km_WaterLand-Proportion": "GDPS-WEonG - Water/land proportion",
   "GDPS-WEonG_15km_WaterLand-Proportion.3h": "GDPS-WEonG - Water/land proportion (3 hourly forecast)",
+  "GDPS-WEonG_15km_WindDir": "GDPS-WEonG - Wind direction [deg true]",
   "GDPS-WEonG_15km_WindDir.3h": "GDPS-WEonG - Wind direction [deg true] (3 hourly forecast)",
+  "GDPS-WEonG_15km_WindGust": "GDPS-WEonG - Gust [m/s]",
   "GDPS-WEonG_15km_WindGust.3h": "GDPS-WEonG - Gust [m/s] (3 hourly forecast)",
+  "GDPS-WEonG_15km_WindSpeed": "GDPS-WEonG - Wind speed [m/s]",
   "GDPS-WEonG_15km_WindSpeed.3h": "GDPS-WEonG - Wind speed [m/s] (3 hourly forecast)",
   "GDPS.CONV_KINDEX.PT3H": "GDPS.CONV - Thunderstorm potential index George K (3 hourly forecast)",
   "GDPS.CONV_KINDEX.PT3H-CONTOUR": "GDPS.CONV - Thunderstorm potential index George K (3 hourly forecast) (contour)",
@@ -2170,6 +2204,7 @@
   "GEWPS_25km_WindWavesSignificantHeight_20": "GEWPS_25km_WindWavesSignificantHeight_20 - Significant height of wind waves [m]",
   "GEWPS_25km_WindWavesSignificantHeight_21": "GEWPS_25km_WindWavesSignificantHeight_21 - Significant height of wind waves [m]",
   "GOES-East_1km_DayCloudType-NightMicrophysics": "GOES-East Day Cloud Type/Night Microphysics [1 km]",
+  "GOES-East_1km_DayLandCloudFire-SWIR": "GOES-East Day Land Cloud Fire /SWIR [1 km]",
   "GOES-East_1km_DayVis": "GOES-East Day visibility / Day Cloud Convection  [1 km]",
   "GOES-East_1km_DayVis-NightIR": "GOES-East Day visibility/Night IR [1 km]",
   "GOES-East_1km_FireTemperature-SWIR": "GOES-East Fire Temperature/SWIR Fires [1 km]",
@@ -2183,6 +2218,7 @@
   "GOES-East_2km_NightMicrophysics": "GOES-East Night Microphysics [2 km]",
   "GOES-East_2km_SO2": "GOES-East SO2 [2 km]",
   "GOES-West_1km_DayCloudType-NightMicrophysics": "GOES-West Day Cloud Type/Night Microphysics [1 km]",
+  "GOES-West_1km_DayLandCloudFire-SWIR": "GOES-West Day Land Cloud Fire /SWIR [1 km]",
   "GOES-West_1km_DayVis": "GOES-West Day visibility / Day Cloud Convection [1 km]",
   "GOES-West_1km_DayVis-NightIR": "GOES-West Day visibility/Night IR [1 km]",
   "GOES-West_1km_FireTemperature-SWIR": "GOES-West Fire Temperature/SWIR Fires [1 km]",
@@ -2588,9 +2624,11 @@
   "HRDPS.CONTINENTAL_UVAX_00Z": "HRDPS.CONTINENTAL - Daily maximum of the UV Index (00Z model run)",
   "HRDPS.CONTINENTAL_UVAX_06Z": "HRDPS.CONTINENTAL - Daily maximum of the UV Index (06Z model run)",
   "HRDPS.CONTINENTAL_UVAX_12Z": "HRDPS.CONTINENTAL - Daily maximum of the UV Index (12Z model run)",
+  "HRDPS.CONTINENTAL_UVAX_18Z": "HRDPS.CONTINENTAL - Daily maximum of the UV Index (18Z model run)",
   "HRDPS.CONTINENTAL_UVCX_00Z": "HRDPS.CONTINENTAL - Daily maximum of the UV Index for clear-sky conditions (00Z model run)",
   "HRDPS.CONTINENTAL_UVCX_06Z": "HRDPS.CONTINENTAL - Daily maximum of the UV Index for clear-sky conditions (06Z model run)",
   "HRDPS.CONTINENTAL_UVCX_12Z": "HRDPS.CONTINENTAL - Daily maximum of the UV Index for clear-sky conditions (12Z model run)",
+  "HRDPS.CONTINENTAL_UVCX_18Z": "HRDPS.CONTINENTAL - Daily maximum of the UV Index for clear-sky conditions (18Z model run)",
   "HRDPS.CONTINENTAL_WD": "HRDPS.CONTINENTAL - Wind direction at 10m above surface [°]",
   "HRDPS.CONTINENTAL_WD_120m": "HRDPS.CONTINENTAL - Wind direction at 120m above surface [°]",
   "HRDPS.CONTINENTAL_WD_40m": "HRDPS.CONTINENTAL - Wind direction at 40m above surface [°]",
@@ -2859,7 +2897,7 @@
   "HURRICANE_RESPONSE_ZONE": "Hurricane Response Zone",
   "Lightning_2.5km_Density": "Lightning Flash Density over Canada (2.5 km) [flash/km²/min]",
   "METNOTES": "MetNotes",
-  "Marine-Standard-Forecast-Zones": "Marine Standard Forecast Zones",
+  "Marine-Standard-Forecast-Zones": "Marine Standard Forecast Zones (hybrid)",
   "OCEAN.GIOPS.2D_DIVI": "OCEAN.GIOPS.2D - Sea ice divergence [%/day]",
   "OCEAN.GIOPS.2D_GE": "OCEAN.GIOPS.2D - Volume of sea ice per unit grid cell [m]",
   "OCEAN.GIOPS.2D_GL": "OCEAN.GIOPS.2D - Sea ice fraction",
@@ -3025,7 +3063,7 @@
   "OCEAN.GIOPS.3D_UU2W_4833": "OCEAN.GIOPS.3D - Ocean current - 4833m [m/s]",
   "OCEAN.GIOPS.3D_UU2W_5275": "OCEAN.GIOPS.3D - Ocean current - 5275m [m/s]",
   "OCEAN.GIOPS.3D_UU2W_5728": "OCEAN.GIOPS.3D - Ocean current - 5728m [m/s]",
-  "Public-Standard-Forecast-Zones": "Public Standard Forecast Zones",
+  "Public-Standard-Forecast-Zones": "Public Standard Forecast Zones (hybrid)",
   "RADAR_1KM_RRAI": "Radar precipitation rate for rain [mm/h]",
   "RADAR_1KM_RSNO": "Radar precipitation rate for snow [cm/h]",
   "RADAR_COVERAGE_RRAI": "Dynamic radar coverage for rain",
