Bugfixes, enhancements and wms source integration enhancements

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -22,6 +22,7 @@
   "EPSG:3978": "Lambert Conic Conformal",
   "EPSG:3995": "Arctic Polar Stereo",
   "EPSG:4326": "WGS84 (lat/lon)",
+  "ExpiredTimesteps": "Some timesteps have expired. The temporal values have been updated.",
   "ExtentFullyOOB": "The entire selected temporal extent is no longer available. The date range slider has been reset.",
   "FPS": "FPS",
   "FramesPerSecond": "Frames per second",
@@ -49,12 +50,12 @@
   "Loading": "Loading...",
   "LocalTime": "Local",
   "Loop": "Loop",
-  "LoopRetry": "Service unavailable. Retrying in 20 seconds.",
+  "LoopRetry": "Service unavailable. Retrying in {SECONDS} seconds.",
   "MadeWithAniMet": "Made with MSC AniMet",
   "Major_cities": "Canadian cities",
   "MakeLayersVisible": "All layers are invisible, no animation/image can be created.",
   "MapCustomizations": "Customize map",
-  "MissingTimesteps": "Some timesteps have expired. The temporal values have been updated.",
+  "MissingTimesteps": "Failed to draw {TIMESTEP} for {LAYER}. Time removed from temporal extent.",
   "ModelRun": "Model run",
   "MP4CreateButtonLabel": "Create animation",
   "MP4CreateCancelAnimationCreation": "Cancel",
@@ -87,6 +88,7 @@
   "SearchTZ": "Search time zone",
   "SelectCRS": "Select projection",
   "SelectMR": "Select model run",
+  "ServiceRestored": "Service restored, resuming...",
   "Share": "Share",
   "ShowGraticules": "Show graticules",
   "SnapLayerToExtent": "Apply temporal extent and interval to animation.",
