--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -22,6 +22,7 @@
   "EPSG:3978": "Lambert Conique Conforme",
   "EPSG:3995": "Arctique Polaire Stéréo",
   "EPSG:4326": "WGS84 (lat/lon)",
+  "ExpiredTimesteps": "Certains pas de temps ont expiré. Les informations temporelles ont été mises à jour.",
   "ExtentFullyOOB": "La plage complète des dates sélectionnées n'est plus disponible. La plage des dates sélectionnées a été réinitialisée.",
   "FPS": "IPS",
   "FramesPerSecond": "Images par seconde",
@@ -49,12 +50,12 @@
   "Loading": "Chargement...",
   "LocalTime": "Local",
   "Loop": "Lecture en boucle",
-  "LoopRetry": "Service non disponible. Nouvelle tentative dans 20 secondes.",
+  "LoopRetry": "Service non disponible. Nouvelle tentative dans {SECONDS} secondes.",
   "MadeWithAniMet": "Créé avec AniMet du SMC",
   "Major_cities": "Villes canadiennes",
   "MakeLayersVisible": "Toutes les couches sont invisibles, aucune animation/image ne peut être créée.",
   "MapCustomizations": "Personnaliser la carte",
-  "MissingTimesteps": "Certains pas de temps ont expiré. Les informations temporelles ont été mises à jour.",
+  "MissingTimesteps": "L'affichage du pas de temps {TIMESTEP} a échoué pour {LAYER}. Temps supprimé de l'étendue temporelle.",
   "ModelRun": "Passe du modèle",
   "MP4CreateButtonLabel": "Créer l'animation",
   "MP4CreateCancelAnimationCreation": "Annuler",
@@ -87,6 +88,7 @@
   "SearchTZ": "Rechercher fuseau horaire",
   "SelectCRS": "Sélectionner la projection",
   "SelectMR": "Sélectionner la passe de modèle",
+  "ServiceRestored": "Service rétabli, reprise...",
   "Share": "Partager",
   "ShowGraticules": "Montrer les graticules",
   "SnapLayerToExtent": "Appliquer l'étendue temporelle et l'intervalle à l'animation.",
