Fix incorrect geomet-weather layer tree from bad git cherry-pick; regenerate layer tree for 2.2

--- a/src/locales/fr/layers_weather.json
+++ b/src/locales/fr/layers_weather.json
@@ -650,39 +650,73 @@
   "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P06M-P08M": "Probabilités prévues de précipitations près de la normale - Mois 6-8 [%]",
   "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P09M-P11M": "Probabilités prévues de précipitations près de la normale - Mois 9-11 [%]",
   "FIREWORK.HOTSPOTS": "Points chauds considérés par SRPDQA-FireWork",
+  "GDPS-WEonG_15km_AirTemp": "GDPS-WEonG - Température [°C]",
   "GDPS-WEonG_15km_AirTemp.3h": "GDPS-WEonG - Température [°C] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_BlowingSnow-Prob": "GDPS-WEonG - Probabilité de poudrerie [%]",
   "GDPS-WEonG_15km_BlowingSnow-Prob.3h": "GDPS-WEonG - Probabilité de poudrerie [%] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_BlowingSnowPresence": "GDPS-WEonG - Présence de poudrerie",
   "GDPS-WEonG_15km_BlowingSnowPresence.3h": "GDPS-WEonG - Présence de poudrerie (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_DewPointTemp": "GDPS-WEonG - Température du point de rosée [C]",
   "GDPS-WEonG_15km_DewPointTemp.3h": "GDPS-WEonG - Température du point de rosée [C] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_DominantPrecipType": "GDPS-WEonG - Type dominant de précipitation",
   "GDPS-WEonG_15km_DominantPrecipType.3h": "GDPS-WEonG - Type dominant de précipitation (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_Drizzle-Prob": "GDPS-WEonG - Probabilité de bruine [%]",
   "GDPS-WEonG_15km_Drizzle-Prob.3h": "GDPS-WEonG - Probabilité de bruine [%] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_FreezingDrizzle-Prob": "GDPS-WEonG - Probabilité de bruine verglaçante [%]",
   "GDPS-WEonG_15km_FreezingDrizzle-Prob.3h": "GDPS-WEonG - Probabilité de bruine verglaçante [%] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_FreezingPrecip-Prob": "GDPS-WEonG - Probabilité de précipitation verglaçante [%]",
   "GDPS-WEonG_15km_FreezingPrecip-Prob.3h": "GDPS-WEonG - Probabilité de précipitation verglaçante [%] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_FreezingPrecipCondAmt": "GDPS-WEonG - Quantité conditionnelle de précipitations verglaçantes [mm]",
   "GDPS-WEonG_15km_FreezingPrecipCondAmt.3h": "GDPS-WEonG - Quantité conditionnelle de précipitations verglaçantes [mm] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_FreezingRain-Prob": "GDPS-WEonG - Probabilité de pluie verglaçante [%]",
   "GDPS-WEonG_15km_FreezingRain-Prob.3h": "GDPS-WEonG - Probabilité de pluie verglaçante [%] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_IceFogVisibility": "GDPS-WEonG - Visibilité dans le brouillard glacé [m]",
   "GDPS-WEonG_15km_IceFogVisibility.3h": "GDPS-WEonG - Visibilité dans le brouillard glacé [m] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_IcePellets-Prob": "GDPS-WEonG - Probabilité de grésil [%]",
   "GDPS-WEonG_15km_IcePellets-Prob.3h": "GDPS-WEonG - Probabilité de grésil [%] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_IcePelletsCondAmt": "GDPS-WEonG - Quantité conditionnelle de granulés de glace solide [m]",
   "GDPS-WEonG_15km_IcePelletsCondAmt.3h": "GDPS-WEonG - Quantité conditionnelle de granulés de glace solide [m] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_InstantPrecipType": "GDPS-WEonG - Type de précipitation instantanée",
   "GDPS-WEonG_15km_InstantPrecipType.3h": "GDPS-WEonG - Type de précipitation instantanée (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_LiquidFogVisibility": "GDPS-WEonG - Visibilité à travers le brouillard liquide [m]",
   "GDPS-WEonG_15km_LiquidFogVisibility.3h": "GDPS-WEonG - Visibilité à travers le brouillard liquide [m] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_LiquidPrecip-Prob": "GDPS-WEonG - Probabilité de précipitation liquide [%]",
   "GDPS-WEonG_15km_LiquidPrecip-Prob.3h": "GDPS-WEonG - Probabilité de précipitation liquide [%] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_LiquidPrecipCondAmt": "GDPS-WEonG - Quantité conditionnelle de précipitation liquide [m]",
   "GDPS-WEonG_15km_LiquidPrecipCondAmt.3h": "GDPS-WEonG - Quantité conditionnelle de précipitation liquide [m] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_Orography": "GDPS-WEonG - Orographie du modèle [m]",
   "GDPS-WEonG_15km_Orography.3h": "GDPS-WEonG - Orographie du modèle [m] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_Precip-Prob": "GDPS-WEonG - Probabilité de précipitation [%]",
   "GDPS-WEonG_15km_Precip-Prob.3h": "GDPS-WEonG - Probabilité de précipitation [%] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_PrecipCharacter": "GDPS-WEonG - Caractère de la précipitation",
   "GDPS-WEonG_15km_PrecipCharacter.3h": "GDPS-WEonG - Caractère de la précipitation (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_PrecipCondAmt": "GDPS-WEonG - Quantité conditionnelle de précipitation [m]",
   "GDPS-WEonG_15km_PrecipCondAmt.3h": "GDPS-WEonG - Quantité conditionnelle de précipitation [m] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_Rain-Prob": "GDPS-WEonG - Probabilité de pluie [%]",
   "GDPS-WEonG_15km_Rain-Prob.3h": "GDPS-WEonG - Probabilité de pluie [%] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_SecondMostCommonPrecipType": "GDPS-WEonG - Deuxième type de précipitation le plus commun",
   "GDPS-WEonG_15km_SecondMostCommonPrecipType.3h": "GDPS-WEonG - Deuxième type de précipitation le plus commun (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_SkyState": "GDPS-WEonG - Etat du ciel jour/nuit (couverture et opacité nuageuse combinées)",
   "GDPS-WEonG_15km_SkyState.3h": "GDPS-WEonG - Etat du ciel jour/nuit (couverture et opacité nuageuse combinées) (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_Snow-Prob": "GDPS-WEonG - Probabilité de neige [%]",
   "GDPS-WEonG_15km_Snow-Prob.3h": "GDPS-WEonG - Probabilité de neige [%] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_SnowHeight": "GDPS-WEonG - Hauteur du niveau de la neige [m]",
   "GDPS-WEonG_15km_SnowHeight.3h": "GDPS-WEonG - Hauteur du niveau de la neige [m] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_SnowSqualls-Prob": "GDPS-WEonG - Probabilité de bourrasque de neige [%]",
   "GDPS-WEonG_15km_SnowSqualls-Prob.3h": "GDPS-WEonG - Probabilité de bourrasque de neige [%] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_SolidSnowCondAmt": "GDPS-WEonG - Quantité conditionnelle de neige solide [m]",
   "GDPS-WEonG_15km_SolidSnowCondAmt.3h": "GDPS-WEonG - Quantité conditionnelle de neige solide [m] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_Thunderstorm-Prob": "GDPS-WEonG - Probabilité d'occurence d'orage [%]",
   "GDPS-WEonG_15km_Thunderstorm-Prob.3h": "GDPS-WEonG - Probabilité d'occurence d'orage [%] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_TotalPrecipIntensityIndex": "GDPS-WEonG - Indice d'intensité des précipitations totales",
   "GDPS-WEonG_15km_TotalPrecipIntensityIndex.3h": "GDPS-WEonG - Indice d'intensité des précipitations totales (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_WaterLand-Proportion": "GDPS-WEonG - Proportion terre/eau",
   "GDPS-WEonG_15km_WaterLand-Proportion.3h": "GDPS-WEonG - Proportion terre/eau (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_WindDir": "GDPS-WEonG - Direction du vent [deg true]",
   "GDPS-WEonG_15km_WindDir.3h": "GDPS-WEonG - Direction du vent [deg true] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_WindGust": "GDPS-WEonG - Rafale de vents [m/s]",
   "GDPS-WEonG_15km_WindGust.3h": "GDPS-WEonG - Rafale de vents [m/s] (prévision aux 3 heures)",
+  "GDPS-WEonG_15km_WindSpeed": "GDPS-WEonG - Vitesse du vent [m/s]",
   "GDPS-WEonG_15km_WindSpeed.3h": "GDPS-WEonG - Vitesse du vent [m/s] (prévision aux 3 heures)",
   "GDPS.CONV_KINDEX.PT3H": "GDPS.CONV - Indice du potentiel d'orages George-K (prévision aux 3 heures)",
   "GDPS.CONV_KINDEX.PT3H-CONTOUR": "GDPS.CONV - Indice du potentiel d'orages George-K (prévision aux 3 heures) (contour)",
@@ -2170,26 +2204,28 @@
   "GEWPS_25km_WindWavesSignificantHeight_20": "GEWPS_25km_WindWavesSignificantHeight_20 - Hauteur significative des vagues de la mer du vent [m]",
   "GEWPS_25km_WindWavesSignificantHeight_21": "GEWPS_25km_WindWavesSignificantHeight_21 - Hauteur significative des vagues de la mer du vent [m]",
   "GOES-East_1km_DayCloudType-NightMicrophysics": "GOES-Est Type de nuage de jour/Microphysique de nuit [1 km]",
-  "GOES-East_1km_DayVis": "GOES-Est visibilité de jour / Convection nuageuse de jour [1 km]",
+  "GOES-East_1km_DayLandCloudFire-SWIR": "GOES-Est Détection de feux de jour /SWIR [1 km]",
+  "GOES-East_1km_DayVis": "GOES-Est Visibilité de jour / Convection nuageuse de jour [1 km]",
   "GOES-East_1km_DayVis-NightIR": "GOES-Est Visibilité de jour/IR de nuit [1 km]",
   "GOES-East_1km_FireTemperature-SWIR": "GOES-Est Température des feux/SWIR [1 km]",
   "GOES-East_1km_NaturalColor": "GOES-Est Couleur naturelle [1 km]",
   "GOES-East_1km_SmokeABIband1-SWIR": "GOES-Est Fumée sur Canal-1 ABI/SWIR [1 km]",
   "GOES-East_1km_SnowFog-NightMicrophysics": "GOES-Est Neige-brouillard/Microphysique de nuit [1 km]",
-  "GOES-East_1km_VisibleIRSandwich-NightMicrophysicsIR": "GOES-Est Sandwich Visible et IR/Microphysique de nuit et IR [1 km]",
+  "GOES-East_1km_VisibleIRSandwich-NightMicrophysicsIR": "GOES-Est Sandwich visible et IR/Microphysique de nuit et IR [1 km]",
   "GOES-East_2km_Ash": "GOES-Est Cendre [2 km]",
   "GOES-East_2km_Dust": "GOES-Est Poussière [2 km]",
   "GOES-East_2km_NightIR": "GOES-Est IR de nuit [2 km]",
   "GOES-East_2km_NightMicrophysics": "GOES-Est Microphysique de nuit [2 km]",
   "GOES-East_2km_SO2": "GOES-Est SO2 [2 km]",
   "GOES-West_1km_DayCloudType-NightMicrophysics": "GOES-Ouest Type de nuage de jour/Microphysique de nuit [1 km]",
-  "GOES-West_1km_DayVis": "GOES-Ouest visibilité de jour / Convection nuageuse de jour [1 km]",
+  "GOES-West_1km_DayLandCloudFire-SWIR": "GOES-Ouest Détection de feux de jour /SWIR [1 km]",
+  "GOES-West_1km_DayVis": "GOES-Ouest Visibilité de jour / Convection nuageuse de jour [1 km]",
   "GOES-West_1km_DayVis-NightIR": "GOES-Ouest Visibilité de jour/IR de nuit [1 km]",
   "GOES-West_1km_FireTemperature-SWIR": "GOES-Ouest Température des feux/SWIR [1 km]",
   "GOES-West_1km_NaturalColor": "GOES-Ouest Couleur naturelle [1 km]",
   "GOES-West_1km_SmokeABIband1-SWIR": "GOES-Ouest Fumée sur Canal-1 ABI/SWIR [1 km]",
   "GOES-West_1km_SnowFog-NightMicrophysics": "GOES-Ouest Neige-brouillard/Microphysique de nuit [1 km]",
-  "GOES-West_1km_VisibleIRSandwich-NightMicrophysicsIR": "GOES-Ouest Sandwich Visible et IR/Microphysique de nuit et IR [1 km]",
+  "GOES-West_1km_VisibleIRSandwich-NightMicrophysicsIR": "GOES-Ouest Sandwich visible et IR/Microphysique de nuit et IR [1 km]",
   "GOES-West_2km_Ash": "GOES-Ouest Cendre [2 km]",
   "GOES-West_2km_Dust": "GOES-Ouest Poussière [2 km]",
   "GOES-West_2km_NightIR": "GOES-Ouest IR de nuit [2 km]",
@@ -2584,9 +2620,11 @@
   "HRDPS.CONTINENTAL_UVAX_00Z": "HRDPS.CONTINENTAL - Maximum journalier de l'indice UV (Passe de modèle 00Z)",
   "HRDPS.CONTINENTAL_UVAX_06Z": "HRDPS.CONTINENTAL - Maximum journalier de l'indice UV (Passe de modèle 06Z)",
   "HRDPS.CONTINENTAL_UVAX_12Z": "HRDPS.CONTINENTAL - Maximum journalier de l'indice UV (Passe de modèle 12Z)",
+  "HRDPS.CONTINENTAL_UVAX_18Z": "HRDPS.CONTINENTAL - Maximum journalier de l'indice UV (Passe de modèle 18Z)",
   "HRDPS.CONTINENTAL_UVCX_00Z": "HRDPS.CONTINENTAL - Maximum journalier de l'indice UV pour des conditions de ciel clair (Passe de modèle 00Z)",
   "HRDPS.CONTINENTAL_UVCX_06Z": "HRDPS.CONTINENTAL - Maximum journalier de l'indice UV pour des conditions de ciel clair (Passe de modèle 06Z)",
   "HRDPS.CONTINENTAL_UVCX_12Z": "HRDPS.CONTINENTAL - Maximum journalier de l'indice UV pour des conditions de ciel clair (Passe de modèle 12Z)",
+  "HRDPS.CONTINENTAL_UVCX_18Z": "HRDPS.CONTINENTAL - Maximum journalier de l'indice UV pour des conditions de ciel clair (Passe de modèle 18Z)",
   "HRDPS.CONTINENTAL_WD": "HRDPS.CONTINENTAL - Direction du vent à 10m au dessus de la surface [°]",
   "HRDPS.CONTINENTAL_WD_120m": "HRDPS.CONTINENTAL - Direction du vent à 120m au dessus de la surface [°]",
   "HRDPS.CONTINENTAL_WD_40m": "HRDPS.CONTINENTAL - Direction du vent à 40m au dessus de la surface [°]",
@@ -2855,7 +2893,7 @@
   "HURRICANE_RESPONSE_ZONE": "Zone de réaction aux ouragans",
   "Lightning_2.5km_Density": "Densité de foudre sur le Canada (2.5 km) [flash/km²/min]",
   "METNOTES": "MetNotes",
-  "Marine-Standard-Forecast-Zones": "Zones standards de prévision maritime",
+  "Marine-Standard-Forecast-Zones": "Zones standards de prévision maritime (hybride)",
   "OCEAN.GIOPS.2D_DIVI": "OCEAN-GIOPS.2D - Divergence de la glace de mer [%/jour]",
   "OCEAN.GIOPS.2D_GE": "OCEAN.GIOPS.2D - Volume de glace de mer par unité de surface de cellule de la grille [m]",
   "OCEAN.GIOPS.2D_GL": "OCEAN.GIOPS.2D - Fraction de glace marine",
@@ -3021,7 +3059,7 @@
   "OCEAN.GIOPS.3D_UU2W_4833": "OCEAN.GIOPS.3D - Courant océanique - 4833m [m/s]",
   "OCEAN.GIOPS.3D_UU2W_5275": "OCEAN.GIOPS.3D - Courant océanique - 5275m [m/s]",
   "OCEAN.GIOPS.3D_UU2W_5728": "OCEAN.GIOPS.3D - Courant océanique - 5728m [m/s]",
-  "Public-Standard-Forecast-Zones": "Zones standards de prévision publique",
+  "Public-Standard-Forecast-Zones": "Zones standards de prévision publique (hybride)",
   "RADAR_1KM_RRAI": "Taux de précipitation radar pour la pluie [mm/h]",
   "RADAR_1KM_RSNO": "Taux de précipitation radar pour la neige [cm/h]",
   "RADAR_COVERAGE_RRAI": "Couverture radar dynamique pour la pluie",
