--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -6,6 +6,8 @@
   "ApplyColor": "Appliquer la couleur à la carte",
   "AspectSelection": "Sélectionner le format de sortie",
   "AttributionOSM": "Carte par © OpenStreetMap",
+  "Base": "Originale",
+  "Black": "Noire",
   "Boundaries": "Frontières géopolitiques canadiennes",
   "BrokenLayer": "La couche ne peut présentement pas être chargée.",
   "Climate": "GeoMet-Climat",
@@ -13,15 +15,14 @@
   "CMD_WMS": "CMD-WMS",
   "Colon": " :",
   "ColorBorder": "Bordure des légendes en couleur",
-  "ColorPicker": "Sélecteur de couleur",
   "ControllerOptions": "Options de lecture",
-  "DarkBasemapSwitch": "Sombre",
+  "Dark": "Sombre",
   "DisplayLegend": "Afficher la légende",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_fr/",
-  "EPSG:3857": "Web Mercator",
-  "EPSG:3978": "Lambert Conique Conforme",
-  "EPSG:3995": "Arctique Polaire Stéréo",
-  "EPSG:4326": "WGS84 (lat/lon)",
+  "EPSG3857": "Web Mercator",
+  "EPSG3978": "Lambert Conique Conforme",
+  "EPSG3995": "Arctique Polaire Stéréo",
+  "EPSG4326": "WGS84 (lat/lon)",
   "ExpiredTimesteps": "Certains pas de temps ont expiré. Les informations temporelles ont été mises à jour.",
   "ExtentFullyOOB": "La plage complète des dates sélectionnées n'est plus disponible. La plage des dates sélectionnées a été réinitialisée.",
   "FPS": "IPS",
@@ -29,7 +30,7 @@
   "GeoMetSearchLabel": "Chercher les couches {wmsSource}",
   "GeoMetWms": "Ajouter des couches {wmsSource}",
   "GoToHomePage": "Aller à la page d'accueil AniMet du SMC",
-  "InvisibleBasemap": "Rendre la carte de fond invisible",
+  "Grey": "Grise",
   "JPEGCreateButtonLabel": "Créer l'image",
   "JPEGExportDownload": "Télécharger au format JPEG",
   "JPEGExportSubtitle": "Prévisualiser l'image créée et télécharger à l'aide du bouton ci-dessous",
@@ -47,6 +48,7 @@
   "LayerControlsTitle": "Configurer",
   "LayerStyle": "Sélectionner le style de la couche",
   "LayerTree": "Ajouter",
+  "Light": "Claire",
   "Loading": "Chargement...",
   "LocalTime": "Local",
   "Loop": "Lecture en boucle",
@@ -64,12 +66,12 @@
   "MP4CreateLightMode": "Mode clair",
   "MP4CreateNotifyCancelAnimation": "La création de l'animation a été annulée car la fenêtre de votre navigateur a été redimensionnée.",
   "MP4CreateTitle": "Animer",
-  "MP4CreateTitleHint": "Limite de 250 caractères",
   "MP4ExportDownload": "Télécharger au format MP4",
   "MP4ExportSubtitle": "Prévisualiser l'animation créée et télécharger à l'aide du bouton ci-dessous",
   "MP4ExportTitle": "Visualiser et exporter",
   "MSCAnimet": "AniMet du SMC",
   "MSCAnimetEmail": "Animation météo créée à partir d'AniMet du SMC",
+  "NoBasemap": "Aucun fond",
   "NoData": "Aucune donnée disponible ici",
   "NotFound": "Erreur 404",
   "NotFoundSub": "La page que vous recherchez est introuvable.",
@@ -105,6 +107,7 @@
   "VideoFormat": "Résolution",
   "Water_bodies": "Délimitations des plans d'eau canadiens",
   "Weather": "GeoMet-Météo",
+  "White": "Blanche",
   "Widescreen": "Large",
   "WrongTimeFormat": "Le format utilisé pour le temps n'est pas reconnu par l'application.\nLe standard WMS supporte 4 façons d'ajouter vos dates à l'intérieur d'un WMS, soit:\n\tUne seule date;\n\tPlusieurs dates séparées d'une virgule;\n\tDébut/Fin/Intervalle;\n\tDébut1/Fin1/Intervalle1,Début2/Fin2/Intervalle2,etc.\nSi vous souhaitez ajouter cette couche dans AniMet, veuillez faire les changements appropriés dans votre source WMS."
 }
