--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -6,6 +6,8 @@
   "ApplyColor": "Apply color to basemap",
   "AspectSelection": "Select aspect ratio",
   "AttributionOSM": "Map by ©OpenStreetMap",
+  "Base": "Base",
+  "Black": "Black",
   "Boundaries": "Canadian geopolitical boundaries",
   "BrokenLayer": "Currently unable to load layer.",
   "Climate": "GeoMet-Climate",
@@ -13,15 +15,14 @@
   "CMD_WMS": "CMD-WMS",
   "Colon": ":",
   "ColorBorder": "Legends with coloured borders",
-  "ColorPicker": "Color picker",
   "ControllerOptions": "Playback options",
-  "DarkBasemapSwitch": "Dark",
+  "Dark": "Dark",
   "DisplayLegend": "Display legend",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_en/",
-  "EPSG:3857": "Web Mercator",
-  "EPSG:3978": "Lambert Conic Conformal",
-  "EPSG:3995": "Arctic Polar Stereo",
-  "EPSG:4326": "WGS84 (lat/lon)",
+  "EPSG3857": "Web Mercator",
+  "EPSG3978": "Lambert Conic Conformal",
+  "EPSG3995": "Arctic Polar Stereo",
+  "EPSG4326": "WGS84 (lat/lon)",
   "ExpiredTimesteps": "Some timesteps have expired. The temporal values have been updated.",
   "ExtentFullyOOB": "The entire selected temporal extent is no longer available. The date range slider has been reset.",
   "FPS": "FPS",
@@ -29,7 +30,7 @@
   "GeoMetSearchLabel": "Search {wmsSource} layers",
   "GeoMetWms": "Add {wmsSource} layers",
   "GoToHomePage": "Go to MSC AniMet home page",
-  "InvisibleBasemap": "Make basemap invisible",
+  "Grey": "Grey",
   "JPEGCreateButtonLabel": "Create image",
   "JPEGExportDownload": "Download as JPEG",
   "JPEGExportSubtitle": "Preview the created image and download using the button below",
@@ -47,6 +48,7 @@
   "LayerControlsTitle": "Configure",
   "LayerStyle": "Select layer style",
   "LayerTree": "Add",
+  "Light": "Light",
   "Loading": "Loading...",
   "LocalTime": "Local",
   "Loop": "Loop",
@@ -64,12 +66,12 @@
   "MP4CreateLightMode": "Light mode",
   "MP4CreateNotifyCancelAnimation": "The animation creation has been cancelled given your browser window has been resized",
   "MP4CreateTitle": "Animate",
-  "MP4CreateTitleHint": "Limit of 250 characters",
   "MP4ExportDownload": "Download as MP4",
   "MP4ExportSubtitle": "Preview the created animation and download using the button below",
   "MP4ExportTitle": "Visualize & export",
   "MSCAnimet": "MSC AniMet",
   "MSCAnimetEmail": "Weather animation made with MSC AniMet",
+  "NoBasemap": "No basemap",
   "NoData": "No data available here",
   "NotFound": "404 Not Found",
   "NotFoundSub": "The page you are looking for does not exist.",
@@ -105,6 +107,7 @@
   "VideoFormat": "Resolution",
   "Water_bodies": "Canadian water bodies",
   "Weather": "GeoMet-Weather",
+  "White": "White",
   "Widescreen": "Widescreen",
   "WrongTimeFormat": "The format used for time is not recognized by the application.\nThe WMS standard supports 4 ways of adding dates inside a WMS, which are:\n\tA single date;\n\tMultiple dates comma separated;\n\tStart/End/Interval;\n\tStart1/End1/Interval1,Start2/End2/Interval2,etc.\nIf you wish to add this layer to AniMet, you will need to update the WMS source accordingly."
 }
