Recoded VTabs with HTML/JS/CSS and removed NRCan overlays

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -11,6 +11,7 @@
   "Boundaries": "Canadian geopolitical boundaries",
   "BrokenLayer": "Currently unable to load layer.",
   "Climate": "GeoMet-Climate",
+  "ClimateNightly": "GeoMet-Climate Nightly",
   "Close": "Close",
   "CMD_WMS": "CMD-WMS",
   "Colon": ":",
@@ -78,8 +79,6 @@
   "NoTimeTooltip": "Layer has no temporal dimension",
   "OtherProperties": "Properties",
   "OutputFormat": "Output format",
-  "Overlays": "Overlays",
-  "OverlaysTip": "Overlays add information on top of displayed layers.",
   "Portrait": "Portrait",
   "ReplaceLegends": "Legends must be placed inside the frame to appear in the output animation.",
   "ResetRotation": "Reset rotation",
@@ -107,6 +106,7 @@
   "VideoFormat": "Resolution",
   "Water_bodies": "Canadian water bodies",
   "Weather": "GeoMet-Weather",
+  "WeatherNightly": "GeoMet-Weather Nightly",
   "White": "White",
   "Widescreen": "Widescreen",
   "WrongTimeFormat": "The format used for time is not recognized by the application.\nThe WMS standard supports 4 ways of adding dates inside a WMS, which are:\n\tA single date;\n\tMultiple dates comma separated;\n\tStart/End/Interval;\n\tStart1/End1/Interval1,Start2/End2/Interval2,etc.\nIf you wish to add this layer to AniMet, you will need to update the WMS source accordingly."
