--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -11,6 +11,7 @@
   "Boundaries": "Frontières géopolitiques canadiennes",
   "BrokenLayer": "La couche ne peut présentement pas être chargée.",
   "Climate": "GeoMet-Climat",
+  "ClimateNightly": "GeoMet-Climat Nightly",
   "Close": "Fermer",
   "CMD_WMS": "CMD-WMS",
   "Colon": " :",
@@ -78,8 +79,6 @@
   "NoTimeTooltip": "La couche ne possède pas de dimension temporelle",
   "OtherProperties": "Propriétés",
   "OutputFormat": "Format de sortie",
-  "Overlays": "Superpositions",
-  "OverlaysTip": "Les superpositions ajoutent de l'information au-dessus des couches affichées.",
   "Portrait": "Portrait",
   "ReplaceLegends": "Les légendes doivent être placées dans le cadre pour apparaitre dans l'animation.",
   "ResetRotation": "Réinitialiser la rotation",
@@ -107,6 +106,7 @@
   "VideoFormat": "Résolution",
   "Water_bodies": "Délimitations des plans d'eau canadiens",
   "Weather": "GeoMet-Météo",
+  "WeatherNightly": "GeoMet-Météo Nightly",
   "White": "Blanche",
   "Widescreen": "Large",
   "WrongTimeFormat": "Le format utilisé pour le temps n'est pas reconnu par l'application.\nLe standard WMS supporte 4 façons d'ajouter vos dates à l'intérieur d'un WMS, soit:\n\tUne seule date;\n\tPlusieurs dates séparées d'une virgule;\n\tDébut/Fin/Intervalle;\n\tDébut1/Fin1/Intervalle1,Début2/Fin2/Intervalle2,etc.\nSi vous souhaitez ajouter cette couche dans AniMet, veuillez faire les changements appropriés dans votre source WMS."
