Added NRCan as a source for Nightly since the overlays tab was removed

--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -78,6 +78,7 @@
   "NotFound": "Erreur 404",
   "NotFoundSub": "La page que vous recherchez est introuvable.",
   "NoTimeTooltip": "La couche ne possède pas de dimension temporelle",
+  "NRCan": "Ressources naturelles Canada",
   "OtherProperties": "Propriétés",
   "OutputFormat": "Format de sortie",
   "Portrait": "Portrait",
