--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -78,6 +78,7 @@
   "NotFound": "404 Not Found",
   "NotFoundSub": "The page you are looking for does not exist.",
   "NoTimeTooltip": "Layer has no temporal dimension",
+  "NRCan": "Natural Resources Canada",
   "OtherProperties": "Properties",
   "OutputFormat": "Output format",
   "Portrait": "Portrait",
